2015-10-31  6.9.2-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-5, GIT revision 10316:86a76b6:20151031.

2015-10-15  6.9.2-5 Dirk Lemstra <dirk@lem.....org>
  * Fixed alpha blending issue with semi-transparent pixels in the merged
    image of PSD files. This can be disabled by setting the option
    'psd:alpha-unblend' to 'off' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28169).
  * Fixed issue in jpeg:extent that prevented it from working (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=126638).
  * Fixed memory leak when reading Photoshop layers in a TIFF file.

2015-10-12  6.9.2-5 Cristy  <quetzlzacatenango@image...>
  * Support gradient:bounding-box, gradient:vector, gradient:center, and
    gradient:radius to shape the gradient rendering.
  * Recognize label:@- as stdin (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28501).
  * Make commas optional for coordinates (e.g. 0,0 256,256).

2015-10-10  6.9.2-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-4, GIT revision 10273:e00cf21:20151010

2015-10-08  6.9.2-4 Dirk Lemstra <dirk@lem.....org>
  * Fixed accessing subimage in a TIFF photoshop layer (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28469).
  * Fixed out of bounds error in -splice (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28466).

2015-09-25  6.9.2-4 Eric McConville <emcconville@emccon...>
  * Created Manhattan Interpolate method for -sparse-color (reference
    https://github.com/ImageMagick/ImageMagick/pull/36).

2015-09-22  6.9.2-4 Cristy  <quetzlzacatenango@image...>
  * Prevent null pointer access (reference
    https://github.com/ImageMagick/ImageMagick/pull/34).
  * Specify histogram code image format implictedly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28412).
  * Don't round up for JPEG image resolution (reference