@@ -152,6 +152,7 @@ static const CoderMapInfo
     { "IPTCTEXT", "META" },
     { "IPTCWTEXT", "META" },
     { "ISOBRL", "BRAILLE" },
+    { "ISOBRL6", "BRAILLE" },
     { "JBG", "JBIG" },
     { "JNG", "PNG" },
     { "JPC", "JP2" },
@@ -236,6 +237,7 @@ static const CoderMapInfo
     { "TIF", "TIFF" },
     { "TTC", "TTF" },
     { "UBRL", "BRAILLE" },
+    { "UBRL6", "BRAILLE" },
     { "VDA", "TGA" },
     { "VST", "TGA" },
     { "WIZARD", "MAGICK" },
