@@ -1,3 +1,7 @@
+2015-11-02  6.9.2-6 Samuel Thibault <samuel.thibault@...org> 
+  * Added 6dot variant for unicode and iso braille formats (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&p=127111).
+
 2015-10-31  6.9.2-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.2-5, GIT revision 10316:86a76b6:20151031.
 
